# CourtJester

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  info_sample.json  sqlx-data.json
.github/workflows/: build-debug.yml  pull_request.yml  release-linux.yml  release-windows.yml  release.yml  rust.yml  update.yml
migrations/: 2020-06-25_01-55-43_starbot.sql  2020-07-03_14-57-21_starbot.sql  20200617130630_initial_migration.sql  20200621215536_composite_pk_commands.sql  20200703145721_starbot.sql  20201016144848_fix_starboard_naming.sql
src/: info_sample.json  main.rs
src/commands/: anime.rs  ciphers.rs  config.rs  custom.rs  help.rs  images.rs  japan.rs  mod.rs  music.rs  other.rs  starboard.rs  starbot.rs  support.rs  textchannel_send.rs  textmod.rs  utility.rs
src/handlers/: command_handler.rs  event_handler.rs  framework.rs  mod.rs  reaction_handler.rs
src/helpers/: botinfo.rs  command_utils.rs  credentials_helper.rs  database_helper.rs  delete_buffer.rs  embed_store.rs  guild_cache.rs  mod.rs  permissions_helper.rs  prefix_cache.rs  reaction_gifs.rs  start_loops.rs  string_renderer.rs  textmod_helper.rs  voice_utils.rs
src/reactions/: mod.rs  reaction_handler.rs  starboard.rs  starbot.rs
src/structures/: cmd_data.rs  commands.rs  errors.rs  json_structs.rs  mod.rs
systemd/: courtjester.service
