[package]
name = "courtjester"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "process", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.2.15"
rand = "0.8"
rust-clock = "0.1.0"
base64 = "0.13.0"
uuid = { version = "0.8", features = ["v4"] }
dashmap = "4.0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.4.3"
songbird = { version = "0.1", default-features = false, features = ["serenity-native", "gateway"] }
lavalink-rs = { version = "0.4.0-alpha" }
aspotify = "0.7.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "native_tls_backend", "voice"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]

[target.'cfg(linux)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["collector", "rustls_backend"]
