[package]
name = "courtjester"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2021"

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "process", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.2.15"
tracing-log = "0.1.3"
rand = "0.8"
rust-clock = "0.1.0"
base64 = "0.13.0"
uuid = { version = "1.0.0", features = ["v4"] }
dashmap = "5.2.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.4.3"
aspotify = "0.7.0"

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs"
branch = "next-deps"
default-features = false
features = ["native", "serenity", "songbird", "tracing-log"]

[dependencies.serenity]
version = "0.11.1"
default-features = true
features = ["model", "collector", "native_tls_backend", "voice"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
default-features = false
features = ["serenity-native", "gateway"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]

[target.'cfg(linux)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.1" }
