[package]
name = "courtjester"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2021"

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "process", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.2.15"
tracing-log = "0.1.3"
rand = "0.8"
# rust-clock = "0.1.0"
base64 = "0.13.0"
uuid = { version = "1.0.0", features = ["v4"] }
dashmap = "5.4.0"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.4.3"
# aspotify = "0.7.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "rustls_backend"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline"]
